appId: com.cakale.edu.app
---
- runFlow:
    file: ../shared/login.yaml
    env:
      EMAIL: "test@mail.cakale.com"
      PASSWORD: "Demo@2026!"
- tapOn: "Home"
- assertVisible: "Features"
- assertVisible: "Chat"
- assertVisible: "Account"
- runFlow: ../shared/logout.yaml
